--- a/api/src/main/resources/config.yaml
+++ b/api/src/main/resources/config.yaml
@@ -13,3 +13,12 @@ kumuluzee:
       username: dbuser
       password: postgres
       max-pool-size: 20
+  config:
+    etcd:
+      hosts: http://192.168.29.109:2379
+    discovery:
+      etcd:
+        hosts: http://192.168.29.109:2379
+  configuration-properties:
+    comments-service:
+      enabled: true
