--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,20 @@
 version: "3"
 services:
   postgres:
-    image: postgres:12
-#    ports:
-#      - 5432:5432
+    image: postgres:latest
     environment:
-      POSTGRES_USER: dbuser
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: exercise-metadata
-  exercises:
-    image: petreskiv/code-exercises:1.0-SNAPSHOT-1.0
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=dbuser
+      - POSTGRES_DB=exercise-metadata
     ports:
-      - 8080:8080
+      - "5432:5432"
+  exercises:
+    image: petreskiv/code-exercises:1.0.0-SNAPSHOT-4.1
     environment:
-      KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://postgres:5432/exercise-metadata
-#      KUMULUZEE_CONFIG_ETCD_HOSTS: http://etcd:2379
-#      KUMULUZEE_DISCOVERY_ETCD_HOSTS: http://etcd:2379
+      - KUMULUZEE_DATASOURCES0_CONNECTIONURL=jdbc:postgresql://postgres:5432/exercise-metadata
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=dbuser
+    ports:
+      - "8080:8080"
     depends_on:
       - postgres
-#      - etcd
-#  etcd:
-#    image: quay.io/coreos/etcd:latest
-#    ports:
-#      - "2379:2379"
-#    command: >-
-#      /usr/local/bin/etcd
-#      -name node1
-#      -advertise-client-urls http://etcd:2379
-#      -listen-client-urls http://0.0.0.0:2379
-#      -initial-advertise-peer-urls http://etcd:2380
-#      -listen-peer-urls http://0.0.0.0:2380
-#      -initial-cluster node1=http://etcd:2380
-#      -cors="*"
