--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,6 +37,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.kumuluz.ee.discovery</groupId>
+            <artifactId>kumuluzee-discovery-etcd</artifactId>
+            <version>${kumuluzee-discovery.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
