--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 
         <kumuluzee.version>3.5.0</kumuluzee.version>
         <kumuluzee-rest.version>1.2.3</kumuluzee-rest.version>
-
+        <kumuluzee-config.version>1.2.0</kumuluzee-config.version>
+        <kumuluzee-discovery.version>1.1.1</kumuluzee-discovery.version>
         <postgresql.version>42.2.8</postgresql.version>
     </properties>
 
