--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   postgres:
     image: postgres:latest
+    container_name: pg-exercise-metadata
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=dbuser
@@ -10,11 +11,26 @@ services:
       - "5432:5432"
   exercises:
     image: petreskiv/code-exercises:1.0.0-SNAPSHOT-6.1
+    container_name: exercise-metadata
     environment:
-      - KUMULUZEE_DATASOURCES0_CONNECTIONURL=jdbc:postgresql://postgres:5432/exercise-metadata
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_USER=dbuser
+      KUMULUZEE_DATASOURCES0_CONNECTIONURL: jdbc:postgresql://postgres:5432/exercise-metadata
+      KUMULUZEE_CONFIG_ETCD_HOSTS: http://etcd:2379
+      KUMULUZEE_DISCOVERY_ETCD_HOSTS: http://etcd:2379
     ports:
       - "8080:8080"
     depends_on:
       - postgres
+      - etcd
+  etcd:
+      image: quay.io/coreos/etcd:latest
+      ports:
+        - "2379:2379"
+      command: >-
+        /usr/local/bin/etcd
+        -name node1
+        -advertise-client-urls http://etcd:2379
+        -listen-client-urls http://0.0.0.0:2379
+        -initial-advertise-peer-urls http://etcd:2380
+        -listen-peer-urls http://0.0.0.0:2380
+        -initial-cluster node1=http://etcd:2380
+        -cors="*"
