--- a/k8s/code-exercises-deployment.yaml
+++ b/k8s/code-exercises-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         name: code-exercises
         env:
           - name: KUMULUZEE_DISCOVERY_CLUSTER
-            value: gcloud
+            value: code
           - name: KUMULUZEE_DISCOVERY_ETCD_HOSTS
             value: http://etcd:2379
           - name: KUMULUZEE_CONFIG_ETCD_HOSTS
