--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ env:
 script:
 - mvn clean package -U
 - docker build -t "$DOCKER_IMAGE" .
-#after_success:
-#- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#- docker push "$DOCKER_IMAGE"
+after_success:
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+- docker push "$DOCKER_IMAGE"
