--- a/k8s/code-exercises-deployment.yaml
+++ b/k8s/code-exercises-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: code-exercises
     spec:
       containers:
-        - image: petreskiv/code-exercises:1.0.0-SNAPSHOT-20.1
+        - image: petreskiv/code-exercises:1.0.0-SNAPSHOT-23.1
           name: code-exercises
           env:
             - name: KUMULUZEE_DISCOVERY_CLUSTER
@@ -34,6 +34,18 @@ spec:
             - containerPort: 8080
               name: server
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: server
+            initialDelaySeconds: 20
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: server
+            initialDelaySeconds: 20
+            periodSeconds: 3
 ---
 
 apiVersion: v1
