--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,9 @@
         <kumuluzee-streaming.version>1.2.0</kumuluzee-streaming.version>
         <kumuluzee-rest-client.version>1.3.3</kumuluzee-rest-client.version>
         <kumuluzee-graphql.version>1.0.2</kumuluzee-graphql.version>
-
+        <kumuluzee-logs.version>1.3.1</kumuluzee-logs.version>
+        <kumuluzee-openapi-mp.version>1.0.0-SNAPSHOT</kumuluzee-openapi-mp.version>
+        <kumuluzee-openapi.varsion>1.1.0-SNAPSHOT</kumuluzee-openapi.varsion>
         <postgresql.version>42.2.8</postgresql.version>
     </properties>
 
@@ -103,6 +105,21 @@
                 <groupId>com.kumuluz.ee.metrics</groupId>
                 <artifactId>kumuluzee-metrics-core</artifactId>
                 <version>${kumuluzee-metrics.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>kumuluzee-logs-log4j2</artifactId>
+                <groupId>com.kumuluz.ee.logs</groupId>
+                <version>${kumuluzee-logs.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.openapi</groupId>
+                <artifactId>kumuluzee-openapi</artifactId>
+                <version>${kumuluzee-openapi.varsion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.openapi</groupId>
+                <artifactId>kumuluzee-openapi-ui</artifactId>
+                <version>${kumuluzee-openapi.varsion}</version>
             </dependency>
 
             <dependency>
