fix etcd config

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,7 +22,10 @@
         <dependency>
             <groupId>com.kumuluz.ee.discovery</groupId>
             <artifactId>kumuluzee-discovery-etcd</artifactId>
-            <version>${kumuluzee-discovery.version}</version>
+        </dependency>
+        <dependency>
+            <artifactId>kumuluzee-config-etcd</artifactId>
+            <groupId>com.kumuluz.ee.config</groupId>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.health</groupId>
