--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <kumuluzee-logs.version>1.3.1</kumuluzee-logs.version>
         <kumuluzee-openapi-mp.version>1.0.0-SNAPSHOT</kumuluzee-openapi-mp.version>
         <kumuluzee-openapi.varsion>1.1.0-SNAPSHOT</kumuluzee-openapi.varsion>
+        <kumuluzee-streaming.version>1.2.0</kumuluzee-streaming.version>
         <postgresql.version>42.2.8</postgresql.version>
     </properties>
 
@@ -125,6 +126,11 @@
                 <groupId>com.kumuluz.ee.openapi</groupId>
                 <artifactId>kumuluzee-openapi-ui</artifactId>
                 <version>${kumuluzee-openapi.varsion}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.kumuluz.ee.streaming</groupId>
+                <artifactId>kumuluzee-streaming-kafka</artifactId>
+                <version>${kumuluzee-streaming.version}</version>
             </dependency>
 
             <dependency>
