--- a/services/pom.xml
+++ b/services/pom.xml
@@ -35,6 +35,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kumuluz.ee.streaming</groupId>
+            <artifactId>kumuluzee-streaming-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>com.fri.code</groupId>
             <artifactId>exercise-module-models</artifactId>
             <version>1.0-SNAPSHOT</version>
